--- a/Warm Up Activities.ipynb
+++ b/Warm Up Activities.ipynb
@@ -27,12 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_user_as_dict(name, email, age):\n",
-    "    pass"
+    "    return {\n",
+    "        'name': name,\n",
+    "        'email': email,\n",
+    "        'age': age,\n",
+    "    }"
    ]
   },
   {
@@ -46,9 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'John', 'email': 'john@gmail.com', 'age': 31}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "build_user_as_dict('John', 'john@gmail.com', 31)"
    ]
@@ -82,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,12 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def transform_user_list_to_dict(a_user):\n",
-    "    pass"
+    "    mydict = {}\n",
+    "    mydict['name'] = a_user[0]\n",
+    "    mydict['email'] = a_user[1]\n",
+    "    mydict['age'] = a_user[2]\n",
+    "    return mydict"
    ]
   },
   {
@@ -156,9 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Mary', 'email': 'mary@hotmail.com', 'age': 28}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "transform_user_list_to_dict(['Mary', 'mary@hotmail.com', 28])"
    ]
@@ -192,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,10 +267,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = [\n",
-    "    ['John', 'john@gmail.com', 31],\n",
-    "    ['Mary', 'mary@hotmail.com', 28]\n",
-    "]\n",
+    "    users = [\n",
+    "        ['John', 'john@gmail.com', 31],\n",
+    "        ['Mary', 'mary@hotmail.com', 28]\n",
+    "    ]\n",
     "users"
    ]
   },
